# crypto-bot

./: .env.example  .gitignore  INSTALLATION_DROPIN.md  LIVE_SAFETY.md  README.md  RESULTS_E2E.md  RUNBOOK_LIVE.md  main.py  pyproject.toml  validate_env.sh
.github/workflows/: ci.yml
FEATURE_GUIDES/: ARBITRAGE_ENGINE.md  DASHBOARD.md  SAFE_MODE.md
codex_input/: README.md  codex_delivery_contract.txt  codex_handoff_prompt_ARB_E2E.txt  prop_bot_super_spec_v6.3_super_full_FIXED.md
codex_input/codex_input/: INDEX_FOR_CODEX.txt
configs/: config.live.yaml  config.paper.yaml  config.testnet.yaml
docs/: DECISIONS.md  OPERATIONS.md  README.md  RUNBOOK.md
docs/specs/: PHASE-1.md  PHASE-2.md  PHASE-3.md
propbot/: __init__.py  config.py  context.py  storage.py
propbot/api/: __init__.py  server.py  ui_config.py
propbot/connectors/: base.py  binance.py  okx.py
propbot/engine/: arbitrage.py  metrics.py  state.py
propbot/services/: __init__.py  scheduler.py
propbot/ui/dashboard/: index.html
propbot/ui/static/: dashboard.js  style.css
scripts/: 00_first_run_wizard.sh  01_bootstrap_and_check.sh  02_demo_paper.sh  03_demo_testnet.sh  autotrade_on.sh  dash.sh  demo_trade.sh  executions_watch.sh  one_click_paper.sh  opps_watch.sh  ops.sh  pretty_json.py  quickcheck.sh  start_profile.sh  status.sh  stop_bot.sh  tail_execs.sh  ui_control.sh
tests/: test_api.py  test_config.py  test_dashboard.py  test_engine.py  test_ui_config_validate.py  test_ui_dashboard_smoke.py
web/: index.html
web/static/: dashboard.js
web/templates/: dashboard.html
(+3 files in other folders)
