[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propbot-arb"
version = "0.1.0"
description = "Two-venue spot arbitrage bot with SAFE_MODE gates"
authors = [{name = "PropBot Team"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn>=0.30,<0.31",
    "pydantic>=2.7,<3.0",
    "PyYAML>=6.0,<7.0",
    "prometheus-client>=0.20,<0.21",
    "httpx>=0.27,<0.28",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "rich>=13.7,<14.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "typer>=0.12,<0.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "httpx[http2]>=0.27,<0.28",
    "ruff>=0.5.6,<0.6",
    "mypy>=1.10,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "pytest-cov>=5.0,<6.0"
]

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "ASYNC", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
